# LesionSegmentation

./: CLIWrapper.cxx  CMakeLists.txt  LesionSegmentationModel.h  PredictLesions.cxx  PredictLesions.xml.in  README.SuperBuild  README.md  TrainModel.cxx  TrainModel.xml.in  itkPluginUtilities.h
CMake/: BuildFLANN.cmake  BuildHDF5.cmake  BuildITK.cmake  BuildSEM.cmake  CopyFLANNHeaders.cmake  CopyHDF5Headers.cmake  ExtProjectSetup.cmake  FindFlann.cmake
Data/Baseline/: outputLesionMask.nrrd  outputLesionProb.nrrd
Data/Input/: brain_mask_3mm.nrrd  flair_3mm.nrrd  lesionSegmentation.model  lesion_3mm.nrrd  t1_3mm.nrrd  t2_3mm.nrrd
PredictLesions/: CMakeLists.txt  PredictLesions.cxx  PredictLesions.xml.in
PredictLesions/Testing/Cxx/: CMakeLists.txt
Testing/Cxx/: CMakeLists.txt
TrainModel/: CMakeLists.txt  TrainModel.cxx  TrainModel.xml.in
TrainModel/Testing/Cxx/: CMakeLists.txt  CompareLesionModel.cxx  CompareLesionModel.xml  TrainModelCompareTest.cmake
ann_1.1.2/: CMakeLists.txt
ann_1.1.2/ann2fig/: .ann2fig.cpp.swp
ann_1.1.2/lib/: libANN.1.1.2.dylib  libANN.1.dylib  libANN.dylib
